# chizumu

./: .gitignore  Cargo.toml
assets/charts/: divine's_or_deal.czm  lateral_arc_of_flame.czm
chizumu/: Cargo.toml
chizumu-gpu/: Cargo.toml
chizumu-gpu/src/: command.rs  device.rs  lib.rs  resource.rs  shader.rs
chizumu-graphics/: Cargo.toml
chizumu-graphics/src/: hit.rs  lane.rs  lib.rs  line.rs  renderer.rs
chizumu-graphics/src/game_components/: hit.rs  lane.rs  mod.rs  platform.rs
chizumu-graphics/src/gpu/: command.rs  device.rs  mod.rs  resource.rs  shader.rs  types.rs
chizumu-rendering/: Cargo.toml
chizumu-rendering/src/: lib.rs  line.rs  renderer.rs
chizumu-rendering/src/game_components/: hit.rs  lane.rs  platform.rs
chizumu-rendering/src/mesh/: plane.rs
chizumu/src/: audio.rs  game_state.rs  input.rs  main.rs
chizumu/src/chart/: mod.rs  parse.rs  runtime.rs
chizumu/src/core/: audio.rs  input.rs
chizumu/src/game/: conductor.rs  mod.rs
data/charts/: divine's_or_deal.czm  divine's_or_deal2.czm  hitotoki_tokimeki.czm
shaders/: hit.vs.glsl  hit.vs.glsl.spv  lane.vs.glsl  lane.vs.glsl.spv  line.fs.glsl  line.fs.glsl.spv  line.vs.glsl  line.vs.glsl.spv  platform.vs.glsl  platform.vs.glsl.spv  platform_old.vs.glsl  simple.frag.glsl  simple.vert.glsl  simple.vert.glsl.spv
