[package]
name = "chizumu-rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
log = "0.4.21"

parking_lot = "0.12.2"
nalgebra = "0.32.3"
flo_curves = "0.7.2"

chizumu-gpu = { path = "../chizumu-gpu" }
