[package]
name = "chizumu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chizumu-graphics = { path = "../chizumu-graphics" }

anyhow = "1.0.77"
kira = "0.8.5"
env_logger = "0.10.1"
log = "0.4.20"
parking_lot = "0.12.1"


[dependencies.winit]
version = "0.29.7"
# Wait for ash-window to officially support raw window handle 0.6.0
# default-features = false
features = ["rwh_05"]
